update!: made overall changes to align the API with cliargs-rust (#22)